# OpenJPH

./: .gitignore
src/apps/: CMakeLists.txt
src/apps/ojph_compress/: CMakeLists.txt
src/apps/ojph_expand/: CMakeLists.txt
